Switch to PaperMod Fork
Instead of patching the PaperMod theme using manage.sh, we switch to a
dedicated fork. Larger changes that may be useful for everyone are made
in this fork. Small changes that are only relevant for the blog stay in
manage.sh.

--- a/config.yml
+++ b/config.yml
@@ -54,6 +54,7 @@ params:
   ShowShareButtons: true
   ShowPostNavLinks: true
   ShowCodeCopyButtons: true
+  SocialIconsFooter: true
 
   assets:
     disableHLJS: true
